--- a/test2.html
+++ b/test2.html
@@ -7,5 +7,13 @@
 </head>
 <body>
   <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Test 2</a>
+  <script>
+    document.querySelector("a").addEventListener("click",function(){
+      window.top.postMessage("one","*");
+      setTimeout(function(){
+        window.top.postMessage("two","*");
+      }, 0);
+    });
+  </script>
 </body>
 </html>
