--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
   <title>iOS app2app test</title>
 </head>
 <body>
-  <iframe src="test2.html"></iframe>
+  <iframe src="test2.html?0"></iframe>
   <div id="logs"></div>
   <script>
     window.addEventListener("message", function(event) {
