Add external link

--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <iframe src="test2.html?0"></iframe>
+  <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Test 2</a>
   <div id="logs"></div>
   <script>
     window.addEventListener("message", function(event) {
