--- a/test.html
+++ b/test.html
@@ -6,17 +6,13 @@
   <title>iOS app2app test</title>
 </head>
 <body>
-  <iframe src="test2.html?2"></iframe>
   <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Test 2</a>
   <a href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">Initial</a>
+  <a href="https://google.com">Other</a>
+TARGET BLACNK
+  <a target="_blank" href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Test 2</a>
+  <a target="_blank" href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">Initial</a>
+  <a target="_blank" href="https://google.com">Other</a>
   <div id="logs"></div>
-  <script>
-    window.addEventListener("message", function(event) {
-      const logDiv = document.getElementById("logs");
-      const p = document.createElement("p");
-      p.textContent = `Received message: ${event.data}`;
-      logDiv.appendChild(p);
-    });
-  </script>
 </body>
 </html>
