--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@ TARGET BLACNK
   <a target="_blank" href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">Initial</a>
   <a target="_blank" href="https://google.com">Other</a>
   !!!
+  <iframe src="test2.html"></iframe>
   <script>
     var hidden = false;
     document.querySelectorAll("a").forEach(function(el){
