--- a/test2.html
+++ b/test2.html
@@ -6,16 +6,8 @@
   <title>iOS app2app test</title>
 </head>
 <body>
-  <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Direct</a>
-  <a href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">Initial</a>
-  
-  <script>
-    // document.querySelector("a").addEventListener("click",function(){
-    //   window.top.postMessage("one","*");
-    //   setTimeout(function(){
-    //     window.top.postMessage("two","*");
-    //   }, 0);
-    // });
-  </script>
+  <a target="_blank" href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Test 2</a>
+  <a target="_blank" href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">Initial</a>
+  <a target="_blank" href="https://google.com">Other</a>
 </body>
 </html>
