--- a/test.html
+++ b/test.html
@@ -6,17 +6,21 @@
   <title>iOS app2app test</title>
 </head>
 <body>
-  <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Test 2</a>
-  <a href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">Initial</a>
-  <a href="https://google.com">Other</a>
-TARGET BLACNK
-  <a target="_blank" href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Test 2</a>
-  <a target="_blank" href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">Initial</a>
-  <a target="_blank" href="https://google.com">Other</a>
-  !!!
+  <h2>Same window</h2>
+  <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Direct link</a>
+  <a href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">With redirect</a>
+  <a href="https://google.com">Google</a>
+  <h2>Target blank</h2>
+  <a target="_blank" href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Direct link</a>
+  <a target="_blank" href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">With redirect</a>
+  <a target="_blank" href="https://google.com">Google</a>
+  <h2>Async</h2>
+  <button data-delayed-href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Direct link</button>
+  <button data-delayed-href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">With redirect</button>
+  <button data-delayed-href="https://google.com">Google</button>
+  <h2>In iframe</h2>
   <iframe src="test2.html"></iframe>
   <script>
-    var hidden = false;
     document.querySelectorAll("a").forEach(function(el){
       el.addEventListener("click",function(){
         window.webkit.messageHandlers.oauthStart.postMessage({ url: el.href });
@@ -27,6 +31,16 @@ TARGET BLACNK
       if (event.data && event.data.type === 'linkClicked') {
         window.webkit.messageHandlers.oauthStart.postMessage({ url: event.data.url });
       }
+    });
+
+    document.querySelectorAll("button[data-delayed-href]").forEach(function(el){
+      el.addEventListener("click",function(){
+        setTimeout(function(){
+          const url = el.getAttribute("data-delayed-href");
+          window.open(url, '_blank');
+          window.webkit.messageHandlers.oauthStart.postMessage({ url });
+        }, 1000);
+      });
     });
   </script>
 </body>
