--- a/test.html
+++ b/test.html
@@ -7,8 +7,7 @@
 </head>
 <body>
   <h2>Do we have popup</h2>
-  <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize">Universal link</a>
-  <a href="ydl://">Custom schema</a>
+  <a href="https://app.truv.com">App</a>
   <h2>Same window</h2>
   <a href="https://apix-oauth.chase.com/aggregator-oauth/v1/mobile/authorize?client_id=AKOYA_NWIMJLB1OQ&redirect_uri=https%3A%2F%2Fidp.ddp.akoya.com%2Fcallback&response_type=code&scope=aggregator&state=ys5e5vgugbreemqg5kvskywkx">Direct link</a>
   <a href="https://idp.ddp.akoya.com/auth?connector=chase&response_type=code&client_id=oqtbwc4hkeq7drexigfrlkxus&redirect_uri=https%3A%2F%2Fprod.truv.com%2Fv1%2Fwebhook%2Fbanks%2Foauth-callback&state=3cb9052bd7c448d3a323fa37977f852b_f0d492c945604a2ba7b91627c699cf09&scope=openid+email+profile+offline_access">With redirect</a>
